support annotations in server-group
